--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .container {
-  margin-left: 20px;
+  margin: 20px;
 }
 nav {
   font-size: 18px;
@@ -8,10 +8,11 @@ nav {
   margin-top: 60px;
 }
 .desc {
+  margin: 30px;
   display: grid;
   grid-template-columns: 60% 30%;
 }
 .codeDiv {
   background-color: rgb(231, 227, 226);
-  font-size: 24px;
+  font-size: 20px;
 }
